Let .scrollable-facet be overflow: auto; to prevent bugs.

--- a/rnacentral/portal/static/css/main.css
+++ b/rnacentral/portal/static/css/main.css
@@ -981,7 +981,7 @@ textarea {
 /* Scrollable facets */
 
 .scrollable-facet {
-  overflow: scroll;
+  overflow: auto;
 }
 
 /*------------------------------------------------------------------
